--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   ruby_rails_matrix:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     services:
       postgres:
@@ -19,29 +19,27 @@ jobs:
 
     strategy:
       matrix:
-        ruby: [2.4, 2.7]
+        ruby: [2.4, 2.7, 3.0]
         rails: [4, 5, 6]
         exclude:
           - ruby: 2.4
             rails: 6
           - ruby: 2.7
             rails: 4
+          - ruby: 3
+            rails: 4
+          - ruby: 3
+            rails: 5
 
     steps:
     - uses: actions/checkout@master
 
-    - name: Sets up the environment
-      uses: actions/setup-ruby@v1
+    - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
 
-    - name: Runs code QA and tests
+    - run: |
+        rm -rf Gemfile.lock && bundle && rake
       env:
         RAILS_VERSION: ~> ${{ matrix.rails }}
         DATABASE_URL: postgresql://postgres:postgres@localhost:${{ job.services.postgres.ports[5432] }}/postgres?pool=5
-      run: |
-        rm -rf Gemfile.lock
-        gem uninstall bundler -a --force
-        gem install bundler -v '~> 1'
-        bundle
-        rake
