Update versions in CI config, add Ruby 3.1 and Rails 7.0
Addresses lints from more recent versions of Rubocop.
Also adds dependabot for GitHub Actions.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -31,7 +31,7 @@ Style/StringLiterals:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 80
 
 Metrics/BlockLength:
