--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:11.6
+        image: postgres:14
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
@@ -19,20 +19,30 @@ jobs:
 
     strategy:
       matrix:
-        ruby: [2.4, 2.7, 3.0]
-        rails: [4, 5, 6]
+        ruby: [2.4, 2.7, '3.0', 3.1]
+        rails: [4, 5, 6.0, 6.1, 7.0]
         exclude:
           - ruby: 2.4
-            rails: 6
+            rails: 6.0
+          - ruby: 2.4
+            rails: 6.1
+          - ruby: 2.4
+            rails: 7.0
           - ruby: 2.7
             rails: 4
-          - ruby: 3
+          - ruby: '3.0'
             rails: 4
-          - ruby: 3
+          - ruby: '3.0'
             rails: 5
+          - ruby: 3.1
+            rails: 4
+          - ruby: 3.1
+            rails: 5
+          - ruby: 3.1
+            rails: 6.0
 
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v3
 
     - uses: ruby/setup-ruby@v1
       with:
