--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        ruby: [2.4, 2.7, '3.0', 3.1]
+        ruby: [2.4, 2.7, '3.0', 3.1, 3.2]
         rails: [4, 5, 6.0, 6.1, 7.0]
         exclude:
           - ruby: 2.4
@@ -40,6 +40,14 @@ jobs:
             rails: 5
           - ruby: 3.1
             rails: 6.0
+          - ruby: 3.2
+            rails: 4
+          - ruby: 3.2
+            rails: 5
+          - ruby: 3.2
+            rails: 6.0
+          - ruby: 3.2
+            rails: 6.1
 
     steps:
     - uses: actions/checkout@v3
