--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,14 +20,16 @@ jobs:
     strategy:
       matrix:
         ruby: [2.4, 2.7, '3.0', 3.1, 3.2]
-        rails: [4, 5, 6.0, 6.1, 7.0]
+        rails: [4, 5, 6.0, 6.1, '7.0', 7.1]
         exclude:
           - ruby: 2.4
             rails: 6.0
           - ruby: 2.4
             rails: 6.1
           - ruby: 2.4
-            rails: 7.0
+            rails: '7.0'
+          - ruby: 2.4
+            rails: 7.1
           - ruby: 2.7
             rails: 4
           - ruby: '3.0'
